--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Invitation</title>
+    <title>Үйлену тойға шақыру</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- Top Banner Section -->
     <section id="top-banner" class="section">
-        <img src="https://static.tildacdn.pro/tild6438-3864-4563-b064-633565353936/Media_230523_182754.gif" alt="Wedding Banner">
+        <img src="weddinggif.gif" alt="Үйлену баннері">
     </section>
 
     <!-- Invitation Content Sections -->
     <section id="invitation" class="section">
-        <h1>You are Invited!</h1>
-        <p>Join us for the wedding of [Name] & [Name]</p>
+        <h1>Сізді шақырамыз!</h1>
+        <p>Дариға мен Ерденнің үйлену тойына қош келдіңіз!</p>
     </section>
 
     <section id="details" class="section">
-        <h2>Wedding Details</h2>
-        <p>Date: [Wedding Date]</p>
-        <p>Time: [Wedding Time]</p>
-        <p>Location: [Wedding Venue]</p>
+        <h2>Үйлену тойы туралы мәліметтер</h2>
+        <p>Күні: 3 қараша</p>
+        <p>Уақыты: [Той уақыты]</p>
+        <p>Орны: [Той өтетін орын]</p>
     </section>
 
     <section id="rsvp" class="section">
         <h2>RSVP</h2>
-        <p>Please confirm your attendance by [RSVP Date]</p>
-        <button id="rsvp-button">RSVP Now</button>
+        <p>Қатысатыныңызды растаңыз [RSVP күні]</p>
+        <button id="rsvp-button">Қатысамын деп белгілеңіз</button>
     </section>
 
-    <script src="indexx.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
